# actuator-controller

./: Cargo.toml  flake.nix  plot.py  rust-toolchain.toml
src/: adc.rs  main.rs
