[package]
name = "actuator-controller"
version = "0.0.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.4"

log = "0.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["nightly", "arch-cortex-m", "executor-thread", "integrated-timers", "defmt"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
features = ["unstable-pac", "critical-section-impl", "time-driver", "defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.panic-probe]
version = "0.3.1"
features = ["print-defmt"]

[dependencies.embedded-hal-async]
version = "1.0.0"

[dependencies.assign-resources]
version = "0.4.0"

[dependencies.ads1x1x]
git = "https://github.com/eldruin/ads1x1x-rs.git"
branch = "master"

[dependencies.static_cell]
version = "2.0.0"

[dependencies.portable-atomic]
version = "1.6.0"
features = ["critical-section"]
